🛠️ fixes and improvements.