@@ -1,1 +1,2 @@
-🛠️ fixes and improvements.
+🛠️ 20 percent off for resellers.
+🛠️ automatic test config for new users.
